# telegram2gscheduler

./: LICENSE  README.md
telegram2scheduler/: pyproject.toml
telegram2scheduler/telegram2scheduler/: bot.py
